samples/_failures_safe/1761457021_ca52c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3008af1b.c: In function ‘main’:
./samples/SAFE/__tmp_3008af1b.c:153:20: error: missing terminating " character
  153 |             printf("Failed to
      |                    ^~~~~~~~~~
./samples/SAFE/__tmp_3008af1b.c:153:13: error: expected expression at end of input
  153 |             printf("Failed to
      |             ^~~~~~
./samples/SAFE/__tmp_3008af1b.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3008af1b.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3008af1b.c:153:13: error: expected declaration or statement at end of input
